[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "scikit-build>=0.13",
  "cmake>=3.18",
  "ninja",
  "numba>=0.58",
  "versioneer-518"
]

[tool.black]
exclude = "versioneer.py|numba_dpex/_version.py"
line-length = 80

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if config.DEBUG:",
  "@register_jitable",
  "def dpnp_impl"
]
omit = [
  "numba_dpex/tests/*",
  "numba_dpex/_version.py"
]
precision = 2

[tool.coverage.run]
branch = true
concurrency = [
  "multiprocessing"
]
omit = [
  "numba_dpex/tests/*",
  "numba_dpex/_version.py"
]
parallel = true
source = [
  "numba_dpex"
]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 80
multi_line_output = 3
skip = ["versioneer.py", "numba_dpex/_version.py"]
use_parentheses = true

[tool.pylint]
disable = [
  "fixme"
]

[tool.pytest.ini_options]
addopts = [
  "--disable-warnings",
  "--strict",
  "--durations=20",
  "-ra -vv"
]
minversion = "6.0"
norecursedirs = [
  ".*",
  "*.egg*",
  "build",
  "dist",
  "conda-recipe"
]
testpaths = [
  "numba_dpex/tests"
]
xfail_strict = true

[tool.versioneer]
VCS = "git"
parentdir_prefix = ""
style = "pep440"
versionfile_build = "numba_dpex/_version.py"
versionfile_source = "numba_dpex/_version.py"
